--- a/src/authorize.html
+++ b/src/authorize.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Home Assistant</title>
+    <title>AIS dom</title>
     <!--EXTRA_SCRIPTS-->
   </head>
   <body>
