--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AIS dom</title>
+    <title>Domowy asystent</title>
 
     <link rel='manifest' href='/manifest.json' crossorigin="use-credentials">
     <link rel='icon' href='/static/icons/favicon.ico'>
@@ -74,7 +74,7 @@
   <body>
     <div id='ha-init-skeleton'>
       <div class='message'>
-        AIS dom brak połączenia<br>z serwerem.<br><br>
+        Domowy asystent brak połączenia<br>z serwerem.<br><br>
         <a href='/'>SPRÓBUJ PONOWNIE</a>
       </div>
     </div>
