--- a/public/static/ais_dom/design_tool/index.html
+++ b/public/static/ais_dom/design_tool/index.html
@@ -1,66 +1,53 @@
 <html>
 <head>
-<TITLE>CSS Generator Tool</TITLE> 
+<TITLE>AIS Style Generator</TITLE>
 <meta http-equiv="X-UA-Compatible" content="IE=9;IE=8; IE=7; IE=EDGE" />
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="pragma" content="no-cache">
 <meta http-equiv="expires" content="0">
 <style>
-
-
-
 .demo2 {
-	z-index: 33;	
-	position: fixed;	
-	top: 0;
-	right: 0;	
-	width: 100%;
-	margin-top: 112px;	
-}
-
-.demo {
-	z-index: 33;	
-	position: absolute;		
+	z-index: 33;
+	position: fixed;
 	top: 0;
 	right: 0;
-	width: 100%;	
+	width: 100%;
+	margin-top: 112px;
 }
-
-
+.demo {
+	z-index: 33;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+}
 .idem {
 	position: fixed;
 	z-index: 35;
 }
-
-
-
 .frontdiv{
 	z-index: 50;
 	width: 100%;
 	height: 100%;
 	position: fixed;
 	top: 0;
-	right: 0;	
+	right: 0;
 }
-
 .toolbox {
 	border: 3px solid #c66900;
 	background: rgba(0,0,0,.5);
-	box-shadow: 8px 8px 6px 1px rgba(0, 0, 0, .7); 
+	box-shadow: 8px 8px 6px 1px rgba(0, 0, 0, .7);
 }
-
 .toolbox td, th{
 	font-family: tahoma;
 	color: white;
-	text-shadow: 2px 2px rgba(0, 0, 0, 1); 
+	text-shadow: 2px 2px rgba(0, 0, 0, 1);
 	padding-left: 4px;
 	padding-right: 4px;
 }
-
 .toolbox th{
-	background: black;	
+	background: black;
 }
-
 .toolbox th a{
 	text-decoration: none;
 	font-size: 20pt;
@@ -71,12 +58,10 @@
 }
 body {
 	background: black;
-	margin: 0px;	
+	margin: 0px;
 }
-
 input{
 	font-size: 1.5em;
-	width: 90px;
 }
 </style>
 
@@ -89,53 +74,68 @@ function DoSkew(){
 	var rY = document.getElementById("rY").value;
 	var sX = document.getElementById("sX").value;
 	var sY = document.getElementById("sY").value;
-	
+
 	var sW = document.getElementById("sW").value;
 	var MT = document.getElementById("MT").value;
-	var ML = document.getElementById("ML").value;	
-	
-	var imgURL = "front.png";
-	var bmgURL = location.search.split('img=')[1];
-	
+	var ML = document.getElementById("ML").value;
+
 	var OutVal = "";
-	OutVal = OutVal + "style: |\n"
-	OutVal = OutVal + "  ha-card {\n"
-	
-	if (rT != 0){ rTv = 'rotate(' + rT + 'deg) ';} else { rTv = '';}
-	if (rX != 0){ rXv = 'rotateX(' + rX + 'deg) ';} else { rXv = '';}
-	if (rY != 0){ rYv = 'rotateY(' + rY + 'deg) ';} else { rYv = '';}
-	if (sX != 0){ sXv = 'skewX(' + sX + 'deg) ';} else { sXv = '';}
-	if (sY != 0){ sYv = 'skewY(' + sY + 'deg) ';} else { sYv = '';}
-	
-	if (sW != 0){ 
+
+	var TypeVal = document.querySelector('input[name="card_type"]:checked').value
+	if (TypeVal==="1") {
+		var imgURL = "front.png";
+		OutVal = OutVal + "entity: media_player.wbudowany_glosnik\n"
+		OutVal = OutVal + "type: ais-now-playing-poster\n"
+		OutVal = OutVal + "style: |\n";
+		OutVal = OutVal + "  hui-ais-now-playing-poster-card {\n";
+	} else {
+		OutVal = OutVal + "entity: light.my_light1\n"
+		OutVal = OutVal + "type: ais-light\n"
+		OutVal = OutVal + "tap_action: togle\n"
+	 	OutVal = OutVal + "style: |\n";
+	 	OutVal = OutVal + "  hui-ais-light-card {\n";
+		var imgURL = "light_off.png";
+	}
+	var bmgURL = location.search.split('img=')[1];
+
+	OutVal = OutVal + "    position: absolute;\n";
+
+	if (rT != 0){ rTv = ' rotate(' + rT + 'deg)';} else { rTv = '';}
+	if (rX != 0){ rXv = ' rotateX(' + rX + 'deg)';} else { rXv = '';}
+	if (rY != 0){ rYv = ' rotateY(' + rY + 'deg)';} else { rYv = '';}
+	if (sX != 0){ sXv = ' skewX(' + sX + 'deg)';} else { sXv = '';}
+	if (sY != 0){ sYv = ' skewY(' + sY + 'deg)';} else { sYv = '';}
+
+	if (sW != 0){
 		sWv = 'width="' + sW + '%" ';
-		OutVal = OutVal + '    width: ' + sW + '%\n';
+		OutVal = OutVal + '    width: ' + sW + '%;\n';
 	} else { sWv = '';}
-	
+
 	if (MT != 0){
 		MTv = 'translateY(' + MT + '%) ';
-		OutVal = OutVal + '    top: ' + MT + '%\n';
+		OutVal = OutVal + '    top: ' + MT + '%;\n';
 	} else { MTv = '';}
-	
-	if (ML != 0){ 
+
+	if (ML != 0){
 		MLv = 'translateX(' + ML + '%) ';
-		OutVal = OutVal + '    left: ' + ML + '%\n';
+		OutVal = OutVal + '    left: ' + ML + '%;\n';
 	} else { MLv = '';}
 
-	
+
 	var DemoVal = rTv + rXv + rYv + sXv + sYv;
 	var DemoVal2 = MTv + MLv ;
- 
-  
+
+
 	document.getElementById("demo2").innerHTML = '<img src="' + bmgURL + '" width=100%><div class="demo" id="demo"><img class="idem" id="idem" ' + sWv + 'src="' + imgURL + '"><img src="' + bmgURL + '" class="ssizer" width=100%></div>';
-	
-	
+
+
 	document.getElementById("idem").style.transform = DemoVal;
 	document.getElementById("demo").style.transform = DemoVal2;
-	
-	OutVal = OutVal + '    transform: ' + DemoVal + '\n';
+	if (DemoVal !== ""){
+		OutVal = OutVal + '    transform:' + DemoVal + ';\n';
+	}
 	OutVal = OutVal + "  }\n"
-	document.getElementById("DVal").value = OutVal;	
+	document.getElementById("DVal").value = OutVal;
  }
  function moveit(mdr){
 	if (mdr == 'l') {
@@ -145,13 +145,13 @@ function DoSkew(){
 		document.getElementById("tbox").align = 'right';
 		document.getElementById("mvr").innerHTML = '<a href="#" title="move left" onclick="moveit(\'l\');"><svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#c66900" d="M11.92,19.92L4,12L11.92,4.08L13.33,5.5L7.83,11H22V13H7.83L13.34,18.5L11.92,19.92M4,12V2H2V22H4V12Z" /></svg></a>';
 	}
- 
+
  }
 </script>
 
 </head>
 <body>
-<div style="height: 112px; background-color: #FF9800;" ><span style="color: #fff; font-size: 2em; padding: 20px;display: block;">AIS style generator</span></div>
+<div style="height: 112px; background-color: #FF9800;" ><span style="color: #fff; font-size: 2em; padding: 20px;display: block;"></span></div>
 <table width=100%>
 <tr><td class="demo2" id="demo2"><img src="front.png" width=100%>
 <div class="demo" id="demo"><img src="front.png" id="idem"></div>
@@ -178,17 +178,27 @@ function DoSkew(){
 	<svg style="width:36px;height:36px" viewBox="0 0 24 24">
 		<path fill="red" d="M9,3L5,7H8V14H10V7H13M16,17V10H14V17H11L15,21L19,17H16Z" />
 	</svg>
-</td><td><input type="number" id="MT" min=-100 max=100 value="20" oninput="DoSkew()"> %</td></tr>
+</td><td><input type="number" id="MT" min=-100 max=100 value="20" oninput="DoSkew()"> %</td>
+<td></td>
+</tr>
 <tr><td style="text-align: center;width: 60px;">
 	<svg style="width:36px;height:36px" viewBox="0 0 24 24">
 		<path fill="red" d="M21,9L17,5V8H10V10H17V13M7,11L3,15L7,19V16H14V14H7V11Z" />
 	</svg>
-</td><td><input type="number" id="ML" min=-100 max=100 value="45" oninput="DoSkew()"> %</td></tr>
+</td><td><input type="number" id="ML" min=-100 max=100 value="45" oninput="DoSkew()"> %</td>
+<td style="display: flex;"> <input type="radio" name="card_type" value="1" checked="checked" oninput="DoSkew()"> <svg style="width:32px;height:32px" viewBox="0 0 24 24">
+    <path fill="#fff" d="M19,19H5V5H19M19,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,8V16L15,12L10,8Z" />
+</svg> </td>
+</tr>
 <tr><td style="text-align: center;width: 60px;">
 	<svg style="width:36px;height:36px" viewBox="0 0 24 24">
 		<path fill="red" d="M7.34,6.41L0.86,12.9L7.35,19.38L13.84,12.9L7.34,6.41M3.69,12.9L7.35,9.24L11,12.9L7.34,16.56L3.69,12.9M19.36,6.64C17.61,4.88 15.3,4 13,4V0.76L8.76,5L13,9.24V6C14.79,6 16.58,6.68 17.95,8.05C20.68,10.78 20.68,15.22 17.95,17.95C16.58,19.32 14.79,20 13,20C12.03,20 11.06,19.79 10.16,19.39L8.67,20.88C10,21.62 11.5,22 13,22C15.3,22 17.61,21.12 19.36,19.36C22.88,15.85 22.88,10.15 19.36,6.64Z" />
 	</svg>
-</td><td><input type="number" id="rT" min=-359 max=359 value="0" oninput="DoSkew()"></td></tr>
+</td><td><input type="number" id="rT" min=-359 max=359 value="0" oninput="DoSkew()"></td>
+<td style="display: flex;"> <input type="radio" name="card_type" value="2" oninput="DoSkew()"> <svg style="width:32px;height:32px" viewBox="0 0 24 24">
+    <path fill="#fff" d="M20,11H23V13H20V11M1,11H4V13H1V11M13,1V4H11V1H13M4.92,3.5L7.05,5.64L5.63,7.05L3.5,4.93L4.92,3.5M16.95,5.63L19.07,3.5L20.5,4.93L18.37,7.05L16.95,5.63M12,6A6,6 0 0,1 18,12C18,14.22 16.79,16.16 15,17.2V19A1,1 0 0,1 14,20H10A1,1 0 0,1 9,19V17.2C7.21,16.16 6,14.22 6,12A6,6 0 0,1 12,6M14,21V22A1,1 0 0,1 13,23H11A1,1 0 0,1 10,22V21H14M11,18H13V15.87C14.73,15.43 16,13.86 16,12A4,4 0 0,0 12,8A4,4 0 0,0 8,12C8,13.86 9.27,15.43 11,15.87V18Z" />
+</svg> </td>
+</tr>
 <tr><td style="text-align: center;width: 60px;">
 	<svg style="width:36px;height:36px" viewBox="0 0 24 24">
 		<path fill="red" d="M12 14L8 10L4 14H7.1C7.56 18.56 9.58 22 12 22S16.44 18.56 16.9 14H14.91C14.57 17.45 13.4 20 12 20S9.43 17.45 9.09 14H12M12 4C13.4 4 14.57 6.55 14.91 10H16.9C16.44 5.44 14.42 2 12 2C9.84 2 8 4.74 7.3 8.58L8 7.88L9.21 9.08C9.64 6.11 10.73 4 12 4M22 13V11H11L13 13H22M2 13H3L5 11H2V13Z" />
@@ -209,7 +219,7 @@ function DoSkew(){
 		<path fill="red" d="M12.5,11L10.41,20H5.5L7.59,11H12.5M15,9H6L3,22H12L15,9M21,6L17,2V5H9V7H17V10L21,6Z"/>
 	</svg>
 </td><td><input type="number" id="sY" min=-100 max=100 value="0" oninput="DoSkew()"></td></tr>
-<tr><td colspan=3><textarea id="DVal" cols=50 rows=8></textarea></td></tr>
+<tr><td colspan=3><textarea id="DVal" cols=50 rows=10></textarea></td></tr>
 </table>
 </td></tr></table>
 </form>
@@ -220,4 +230,3 @@ function DoSkew(){
 	DoSkew();
 </script>
 </html>
-
