--- a/public/static/ais_dom/design_tool/index.html
+++ b/public/static/ais_dom/design_tool/index.html
@@ -86,14 +86,16 @@ function DoSkew(){
 		var imgURL = "front.png";
 		OutVal = OutVal + "entity: media_player.wbudowany_glosnik\n"
 		OutVal = OutVal + "type: ais-now-playing-poster\n"
+		OutVal = OutVal + "class: my_class\n"
 		OutVal = OutVal + "style: |\n";
-		OutVal = OutVal + "  hui-ais-now-playing-poster-card {\n";
+		OutVal = OutVal + "  hui-ais-now-playing-poster-card.my_class {\n";
 	} else {
 		OutVal = OutVal + "entity: light.my_light1\n"
 		OutVal = OutVal + "type: ais-light\n"
+		OutVal = OutVal + "class: my_class\n"
 		OutVal = OutVal + "tap_action: togle\n"
 	 	OutVal = OutVal + "style: |\n";
-	 	OutVal = OutVal + "  hui-ais-light-card {\n";
+	 	OutVal = OutVal + "  hui-ais-light-card.my_class {\n";
 		var imgURL = "light_off.png";
 	}
 	var bmgURL = location.search.split('img=')[1];
