fix toggle on floorplan

--- a/public/static/ais_dom/design_tool/index.html
+++ b/public/static/ais_dom/design_tool/index.html
@@ -99,7 +99,7 @@ function DoSkew(){
 		OutVal = OutVal + "entity: light.my_light1\n"
 		OutVal = OutVal + "type: ais-light\n"
 		OutVal = OutVal + "class: my_class\n"
-		OutVal = OutVal + "tap_action: togle\n"
+		OutVal = OutVal + "tap_action: toggle\n"
 	 	OutVal = OutVal + "style: |\n";
 	 	OutVal = OutVal + "  hui-ais-light-card.my_class {\n";
 		var imgURL = "light_off.png";
